# AIE6-DeployPythonicRAG

./: .gitignore  Dockerfile  README.md  app.py
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/aimakerspace/: vectordatabase.py
backend/app/core/aimakerspace/openai_utils/: chatmodel.py
frontend/: .env.example  README.md  babel.config.cjs  jest.config.cjs  jest.setup.cjs  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.test.jsx  config.js  index.css  main.jsx
frontend/src/components/: ChatBox.jsx  ChatBox.test.jsx  FileUploader.jsx  FileUploader.test.jsx
frontend/src/utils/: env.js
