[project]
name = "aie5-deploypythonicrag"
version = "0.1.0"
description = "Simple Pythonic RAG App using FastAPI and React"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "python-dotenv==1.0.1",
    "pydantic==2.10.1",
    "numpy==2.2.2",
    "openai==1.59.9",
    "pypdf2==3.0.1",
    "aiofiles==23.2.1",
    "websockets==14.2",
    "httpx==0.27.0",
    "python-multipart==0.0.9"
]
